fix(ui): display scrollbar in main content (#7460)
* fix(ui): display scrollbar in main content

* fix(ui): retrieve scrollbar in react pages

* remove useless import

--- a/www/front_src/src/components/footer/footer.scss
+++ b/www/front_src/src/components/footer/footer.scss
@@ -48,7 +48,7 @@
     }
   }
 }
-.sidebar.active + #content .footer {
+.sidebar.active + .content .footer {
   left: 160px;
 }
 .full-screen {
