--- a/www/front_src/src/styles/partials/_content.scss
+++ b/www/front_src/src/styles/partials/_content.scss
@@ -24,6 +24,11 @@
 }
 
 .fullscreen-wrapper {
-  flex-grow: 1;
   overflow: hidden;
+  flex-grow: 1;
+}
+
+.react-page {
+  overflow: auto;
+  height: calc(100vh - 82px);
 }
